<resources>
    <string name="app_name">BrokenMirror</string>
    <string name="app_name_1.1.0">BrokenMirror_1.1.0</string>
    <string name="app_name_ui_test_2">BrokenMirror (UI TEST 2차)</string>
    <string name="app_name_ui_test_3">BrokenMirror (UI TEST 3차)</string>
    <string name="app_exit">\'뒤로\' 버튼을 한 번 더 누르시면 종료됩니다.</string>
    <string name="splash_intro">Interactive Security Key Service</string>
    <string name="first_access_title">앱이 처음이시군요</string>
    <string name="first_access_desc">BrokenMirror의 원활한 이용을 위하여 서비스에 필요한 필수 접근 권한을 허용해주세요.</string>
    <string name="first_access_per_title_0">기기 및 앱 기록</string>
    <string name="first_access_per_desc_0">앱 상태 확인 및 기기 식별</string>
    <string name="first_access_per_title_1">저장공간</string>
    <string name="first_access_per_desc_1">이미지 및 보안 파일 저장</string>
    <string name="first_access_per_title_2">주소록</string>
    <string name="first_access_per_desc_2">친구목록 추가 및 갱신</string>
    <string name="first_access_per_title_3">사진·미디어·파일</string>
    <string name="first_access_per_desc_3">사진 또는 미디어 파일 읽기</string>
    <string name="first_access_per_title_4">Wi-Fi 연결 정보</string>
    <string name="first_access_per_desc_4">네트워크 연결 확인</string>
    <string name="first_access_per_title_5">그 외</string>
    <string name="first_access_per_desc_5">필요 시 추가 예정</string>
    <string name="service_guide_title">이용안내</string>
    <string name="service_guide_desc_0">상호보안 키를 이용한</string>
    <string name="service_guide_desc_1">상호보안 서비스</string>
    <string name="service_guide_desc_2">BrokenMirror에서는 본인이 선택한</string>
    <string name="service_guide_desc_3">이미지로 암호화 된 키를 생성하고</string>
    <string name="service_guide_desc_4">친구와 공유할 수 있습니다.</string>
    <string name="service_guide_desc_5">최초 가입 시</string>
    <string name="service_guide_desc_6">상호보안 키 무료</string>
    <string name="service_guide_desc_7">BrokenMirror를 처음</string>
    <string name="service_guide_desc_8">경험하시는 고객님께 즉시 사용 가능한</string>
    <string name="service_guide_desc_9">키 10개</string>
    <string name="service_guide_desc_10">를 제공드립니다.</string>
    <string name="service_guide_desc_11">*무료 키 유효기간 : <b>30</b>일</string>
    <string name="service_guide_desc_12">일</string>
    <string name="service_guide_desc_13">우리를 위한</string>
    <string name="service_guide_desc_14">특별한 상호보안 키</string>
    <string name="service_guide_desc_15">소중한 정보를 안전하게 관리하는</string>
    <string name="service_guide_desc_16">한 차원 높은 보안 관리법</string>
    <string name="service_guide_desc_17">BrokenMirror에서 경험해 보세요.</string>
    <string name="login_edittext_id">아이디를 입력해주세요</string>
    <string name="login_edittext_pw">비밀번호를 입력해주세요</string>
    <string name="login_auto_login">자동 로그인</string>
    <string name="login_button">로그인</string>
    <string name="login_find_id">아이디찾기</string>
    <string name="login_find_pw">비밀번호찾기</string>
    <string name="login_find_pw_modi">비밀번호 재설정</string>
    <string name="login_signup">회원가입</string>
    <string name="login_info_incorrect">로그인 정보가 일치하지 않습니다</string>
    <string name="find_id_name">이름</string>
    <string name="find_id_name_input">이름을 입력해주세요</string>
    <string name="find_id_nationality">국적</string>
    <string name="find_id_nationality_domestic">내국인</string>
    <string name="find_id_nationality_foreign">외국인</string>
    <string name="find_id_birth">생년월일</string>
    <string name="find_id_birth_input">생년월일(YYYYMMDD)</string>
    <string name="find_id_gender_male">남</string>
    <string name="find_id_gender_female">여</string>
    <string name="find_id_phone">휴대폰 번호</string>
    <string name="find_id_phone_input">휴대폰 번호를 입력해주세요</string>
    <string name="find_id_email">이메일</string>
    <string name="find_id_email_input">이메일을 입력해주세요</string>
    <string name="find_id_email_list_0">직접입력</string>
    <string name="find_id_email_list_1">naver.com</string>
    <string name="find_id_email_list_2">gmail.com</string>
    <string name="find_id_email_list_3">daum.net</string>
    <string name="find_id_email_list_4">nate.com</string>
    <string name="find_id_email_check_input">이메일 인증 번호</string>
    <string name="find_id_email_check_request">인증번호 발송</string>
    <string name="find_id_email_re_request">재발송</string>
    <string name="find_id_next">다음</string>
    <string name="find_id_name_condition">한글로 입력해주세요</string>
    <string name="find_id_birth_condition">생년월일 8자리를 입력해주세요</string>
    <string name="find_id_phone_condition">\'-\' 없이 11자리를 입력해주세요</string>
    <string name="find_id_email_condition">옳은 이메일 형식이 아닙니다</string>
    <string name="join_agree">약관동의</string>
    <string name="join_agree_description">BrokenMirror가 제공하는 아래 서비스를\n계속 이용하시려면 약관에 동의가 필요합니다.</string>
    <string name="join_agree_necessary">(필수)</string>
    <string name="join_agree_unnecessary">(선택)</string>
    <string name="join_agree_agreement_0">서비스 이용약관 동의</string>
    <string name="join_agree_agreement_1">개인정보 수집 및 이용 동의</string>
    <string name="join_agree_agreement_2">고유식별정보 처리 동의</string>
    <string name="join_agree_agreement_3">개인정보처리방침</string>
    <string name="join_agree_agreement_4">광고성 알림 수신 동의</string>
    <string name="join_agree_agreement_all">모두 확인 및 동의합니다.</string>
    <string name="join_agree_next">동의 후 계속</string>
    <string name="join_agree_essential">필수 약관에 동의하지 않았습니다.</string>
    <string name="join_agree_det_usage_agreement">이용약관</string>
    <string name="join_agree_det_agree_btn">동의합니다</string>
    <string name="join_agree_det_context_0">
        타이아(주)는 BrokenMirror 서비스 관련하여 아래와 같이 개인정보를 수집 및 이용합니다.
        타이아(주)에서 수집한 개인정보는 정보통신망 이용촉진 및 정보보호 등에 관한 법률,
        개인정보보호법 등 관계 법령에 따라 안전하게 관리됩니다.\n\n
        [제 0 장] 총 칙\n
        제 1 조 (목적)\n
        본 약관은 NICE평가정보(주)(이하 "회사"라 한다)가 제공하는 NICE아이디 서비스(이하 "서비스"라 한다)의 이용 조건 및 절차를 포함한 제반 사항을 규정함을 목적으로 합니다.\n
        제 2 조 (용어의 정의)\n
        본 약관에서 사용하는 용어의 정의는 다음과 같습니다.\n
        1. 서비스: 구현되는 단말기(PC, 휴대폰 등의 각종 유무선 장치를 포함)와 상관 없이 “이용자”가 본인 또는 본인의 정보 일부를 식별하여 그 결과값을 “서비스 이용사”에게 전달하는 NICE 아이디 제반 서비스를 말합니다.\n
        2. 이용자: 본 약관에 정한 바에 따라서 "회사"가 제공하는 “서비스”를 이용하는 고객을 말합니다.\n
        3. 서비스 이용사: "회사"와 “서비스” 이용계약을 체결하여 “서비스”를 이용하는 회사를 의미합니다.\n
        4. 개인정보: 이용자의 성명, 주민등록번호(외국인의 경우 외국인 등록번호), 주소, 연락처, 이메일 주소 등 특정 정보 주체를 식별할 수 있는 정보를 뜻합니다.\n
        5. 서비스 이용 기록: “이용자”가 “서비스”를 이용한 기록 이력을 의미합니다.\n
        제 3 조 (약관의 효력 발생 및 개정)\n
        1. 본 약관은 그 내용을 "서비스"의 화면에 게시하거나 기타의 방법으로 이용자에게 공지함으로써 즉시 그 효력이 발생합니다.\n
        2. "회사"는 “약관의 규제에 관한 법률”, “정보통신망 이용 촉진 및 정보보호 등에 관한 법률” 등 관련 법령에 위배되지 않는 범위 내에서 본 약관을 개정할 수 있습니다.
        [제 2 장] 총 칙\n
        제 1 조 (목적)\n
        본 약관은 NICE평가정보(주)(이하 "회사"라 한다)가 제공하는 NICE아이디 서비스(이하 "서비스"라 한다)의 이용 조건 및 절차를 포함한 제반 사항을 규정함을 목적으로 합니다.\n
        제 2 조 (용어의 정의)\n
        본 약관에서 사용하는 용어의 정의는 다음과 같습니다.\n
        1. 서비스: 구현되는 단말기(PC, 휴대폰 등의 각종 유무선 장치를 포함)와 상관 없이 “이용자”가 본인 또는 본인의 정보 일부를 식별하여 그 결과값을 “서비스 이용사”에게 전달하는 NICE 아이디 제반 서비스를 말합니다.\n
        2. 이용자: 본 약관에 정한 바에 따라서 "회사"가 제공하는 “서비스”를 이용하는 고객을 말합니다.\n
        3. 서비스 이용사: "회사"와 “서비스” 이용계약을 체결하여 “서비스”를 이용하는 회사를 의미합니다.\n
        4. 개인정보: 이용자의 성명, 주민등록번호(외국인의 경우 외국인 등록번호), 주소, 연락처, 이메일 주소 등 특정 정보 주체를 식별할 수 있는 정보를 뜻합니다.\n
        5. 서비스 이용 기록: “이용자”가 “서비스”를 이용한 기록 이력을 의미합니다.\n
        제 3 조 (약관의 효력 발생 및 개정)\n
        1. 본 약관은 그 내용을 "서비스"의 화면에 게시하거나 기타의 방법으로 이용자에게 공지함으로써 즉시 그 효력이 발생합니다.\n
        2. "회사"는 “약관의 규제에 관한 법률”, “정보통신망 이용 촉진 및 정보보호 등에 관한 법률” 등 관련 법령에 위배되지 않는 범위 내에서 본 약관을 개정할 수 있습니다.</string>
    <string name="join_agree_det_context_1">
        타이아(주)는 BrokenMirror 서비스 관련하여 아래와 같이 개인정보를 수집 및 이용합니다.
        타이아(주)에서 수집한 개인정보는 정보통신망 이용촉진 및 정보보호 등에 관한 법률,
        개인정보보호법 등 관계 법령에 따라 안전하게 관리됩니다.\n\n
        [제 1 장] 총 칙\n
        제 1 조 (목적)\n
        본 약관은 NICE평가정보(주)(이하 "회사"라 한다)가 제공하는 NICE아이디 서비스(이하 "서비스"라 한다)의 이용 조건 및 절차를 포함한 제반 사항을 규정함을 목적으로 합니다.\n
        제 2 조 (용어의 정의)\n
        본 약관에서 사용하는 용어의 정의는 다음과 같습니다.\n
        1. 서비스: 구현되는 단말기(PC, 휴대폰 등의 각종 유무선 장치를 포함)와 상관 없이 “이용자”가 본인 또는 본인의 정보 일부를 식별하여 그 결과값을 “서비스 이용사”에게 전달하는 NICE 아이디 제반 서비스를 말합니다.\n
        2. 이용자: 본 약관에 정한 바에 따라서 "회사"가 제공하는 “서비스”를 이용하는 고객을 말합니다.\n
        3. 서비스 이용사: "회사"와 “서비스” 이용계약을 체결하여 “서비스”를 이용하는 회사를 의미합니다.\n
        4. 개인정보: 이용자의 성명, 주민등록번호(외국인의 경우 외국인 등록번호), 주소, 연락처, 이메일 주소 등 특정 정보 주체를 식별할 수 있는 정보를 뜻합니다.\n
        5. 서비스 이용 기록: “이용자”가 “서비스”를 이용한 기록 이력을 의미합니다.\n
        제 3 조 (약관의 효력 발생 및 개정)\n
        1. 본 약관은 그 내용을 "서비스"의 화면에 게시하거나 기타의 방법으로 이용자에게 공지함으로써 즉시 그 효력이 발생합니다.\n
        2. "회사"는 “약관의 규제에 관한 법률”, “정보통신망 이용 촉진 및 정보보호 등에 관한 법률” 등 관련 법령에 위배되지 않는 범위 내에서 본 약관을 개정할 수 있습니다.
        [제 2 장] 총 칙\n
        제 1 조 (목적)\n
        본 약관은 NICE평가정보(주)(이하 "회사"라 한다)가 제공하는 NICE아이디 서비스(이하 "서비스"라 한다)의 이용 조건 및 절차를 포함한 제반 사항을 규정함을 목적으로 합니다.\n
        제 2 조 (용어의 정의)\n
        본 약관에서 사용하는 용어의 정의는 다음과 같습니다.\n
        1. 서비스: 구현되는 단말기(PC, 휴대폰 등의 각종 유무선 장치를 포함)와 상관 없이 “이용자”가 본인 또는 본인의 정보 일부를 식별하여 그 결과값을 “서비스 이용사”에게 전달하는 NICE 아이디 제반 서비스를 말합니다.\n
        2. 이용자: 본 약관에 정한 바에 따라서 "회사"가 제공하는 “서비스”를 이용하는 고객을 말합니다.\n
        3. 서비스 이용사: "회사"와 “서비스” 이용계약을 체결하여 “서비스”를 이용하는 회사를 의미합니다.\n
        4. 개인정보: 이용자의 성명, 주민등록번호(외국인의 경우 외국인 등록번호), 주소, 연락처, 이메일 주소 등 특정 정보 주체를 식별할 수 있는 정보를 뜻합니다.\n
        5. 서비스 이용 기록: “이용자”가 “서비스”를 이용한 기록 이력을 의미합니다.\n
        제 3 조 (약관의 효력 발생 및 개정)\n
        1. 본 약관은 그 내용을 "서비스"의 화면에 게시하거나 기타의 방법으로 이용자에게 공지함으로써 즉시 그 효력이 발생합니다.\n
        2. "회사"는 “약관의 규제에 관한 법률”, “정보통신망 이용 촉진 및 정보보호 등에 관한 법률” 등 관련 법령에 위배되지 않는 범위 내에서 본 약관을 개정할 수 있습니다.</string>
    <string name="find_id_result_null_confirm">확인</string>
    <string name="setting_account_withdrawal_notice_popup_cancel">취소</string>
    <string name="good_bye_title">회원탈퇴 완료</string>
    <string name="good_bye_subtitle">BrokenMirror 회원 탈퇴가 완료되었습니다.\n저희 서비스를 이용해주셔서 감사합니다.</string>
    <string name="setting_key_date">일시</string>
    <string name="setting_key_device">기기</string>
    <string name="setting_account_login_ip">IP</string>
    <string name="message_bottom_key">키 발급</string>
    <string name="message_notice_context_3">(승낙 시, 키 1개 소모)</string>
    <string name="message_popup_receiver">님에게</string>
    <string name="message_popup_request">키 발급을 요청 하시겠습니까?</string>
    <string name="count_name">0/20</string>
    <string name="setting_add_friend">친구 추가</string>
    <string name="setting_add_friend_phone_number">전화번호</string>
    <string name="setting_add_friend_name">친구 이름</string>
    <string name="setting_add_friend_noHyphen">-없이 숫자만 입력해주세요</string>
    <string name="test_user_name">User0</string>
    <string name="test_notification_time">2023.06.30(금) 15:09</string>
    <string name="test_device">SM-S916N</string>
    <string name="test_ip">172.255.255.255</string>
</resources>