<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="10dp"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:background="@drawable/bg_setting_login_history">

    <TextView
        android:id="@+id/text_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingEnd="23dp"
        android:includeFontPadding="false"
        android:text="@string/setting_key_date"
        android:textColor="@color/afafaf"
        android:textSize="14sp"
        android:fontFamily="@font/notosans_regular_ttf"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/login_adapter_date_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:text="@string/test_notification_time"
        android:textColor="@color/friend_list"
        android:textSize="14sp"
        android:fontFamily="@font/notosans_regular_ttf"
        android:singleLine="true"
        app:layout_constraintStart_toEndOf="@+id/text_0"
        app:layout_constraintTop_toTopOf="@+id/text_0"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:includeFontPadding="false"
        android:text="@string/setting_key_device"
        android:textColor="@color/afafaf"
        android:textSize="14sp"
        android:fontFamily="@font/notosans_regular_ttf"
        app:layout_constraintTop_toBottomOf="@+id/text_0"
        app:layout_constraintStart_toStartOf="@id/text_0"
        app:layout_constraintEnd_toEndOf="@+id/text_0"/>

    <TextView
        android:id="@+id/login_adapter_device_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:text="@string/test_device"
        android:textColor="@color/friend_list"
        android:textSize="14sp"
        android:fontFamily="@font/notosans_regular_ttf"
        android:singleLine="true"
        app:layout_constraintTop_toTopOf="@+id/text_1"
        app:layout_constraintStart_toEndOf="@+id/text_1"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:text="@string/setting_account_login_ip"
        android:textColor="@color/afafaf"
        android:textSize="14sp"
        android:fontFamily="@font/notosans_regular_ttf"
        app:layout_constraintTop_toBottomOf="@+id/text_1"
        app:layout_constraintStart_toStartOf="@id/text_0"
        app:layout_constraintEnd_toEndOf="@+id/text_0"/>

    <TextView
        android:id="@+id/login_adapter_ip_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:text="@string/test_ip"
        android:textColor="@color/friend_list"
        android:textSize="14sp"
        android:fontFamily="@font/notosans_regular_ttf"
        android:singleLine="true"
        app:layout_constraintStart_toEndOf="@+id/text_2"
        app:layout_constraintTop_toTopOf="@+id/text_2"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>