<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/basic">

    <View
        android:id="@+id/icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@mipmap/main_icon"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/text_0"/>

    <TextView
        android:id="@+id/text_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/good_bye_title"
        android:textSize="20sp"
        android:textColor="@color/id_result"
        android:fontFamily="@font/notosans_medium_ttf"
        app:layout_constraintTop_toBottomOf="@+id/icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/text_1"/>

    <TextView
        android:id="@+id/text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textSize="16sp"
        android:textColor="@color/text_default_2"
        android:fontFamily="@font/notosans_regular_ttf"
        android:text="@string/good_bye_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/text_0"
        app:layout_constraintBottom_toTopOf="@id/good_bye_confirm_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/good_bye_confirm_button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/main"
        android:includeFontPadding="false"
        android:text="@string/find_id_result_null_confirm"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/notosans_regular_ttf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>